package torneo;

public class NodoTorneo {

}
